Button alignment in header fixed

--- a/app/styles/layout/_controls.scss
+++ b/app/styles/layout/_controls.scss
@@ -1,10 +1,11 @@
 .button {
 	min-width: 98px;
-	display: inline-block;
+	display: block;
 	border-radius: 5px;
 	background-color: $button-color;
 	color: $light-text;
 	font-size: 13px;
+	line-height: 1;
 	font-family: $default-font;
 	font-weight: $medium;
 	overflow: hidden;
